--- a/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
@@ -2,7 +2,7 @@
 @using LCTMoodle.LCTView
 @model DTOLayer.BaiVietBaiGiangDTO
 @{
-    var maKhoaHoc = (int)ViewData["MaKhoaHoc"];
+    var maKhoaHoc = Model.khoaHoc.ma.Value;
     var maNguoiDung = Session["NguoiDung"] as int?;
 
     string[] dsQuyen;
