--- a/LCTMoodle/Content/styles/LCT/Form.css
+++ b/LCTMoodle/Content/styles/LCT/Form.css
@@ -30,7 +30,7 @@
                 }
                                 
                     .lct-form ul > li.loi-dan:not(:first-child) {
-                        margin-top: 30px;
+                        margin-top: 20px;
                     }
 
                 .lct-form ul > li.thong-bao {
@@ -320,6 +320,12 @@
     position: absolute;
     left: -9999px;
 }
+
+    .lct-form input[type="checkbox"]:disabled ~ *,
+    .lct-form input[type="radio"]:disabled ~ * {
+        pointer-events: none;
+        opacity: .3;
+    }
 
     .lct-form input[type="checkbox"] + u,
     .lct-form input[type="radio"] + u {
@@ -2090,7 +2096,6 @@
     position: relative;
     padding: 10px;
     vertical-align: middle;
-    background-color: #fcfcfc;
 }
 
     .lct-bang .thead .th:not(.khong-vien):after,
@@ -2112,7 +2117,6 @@
     position: relative;
     padding: 5px 10px;
     vertical-align: middle;
-    background-color: #fcfcfc;
 }
 
     .lct-bang .tbody .th:not(.khong-vien):after,
