--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -543,7 +543,6 @@ body.khong-scroll {
 }
 
 .popup-full-container {
-    display: table;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -560,11 +559,13 @@ body.khong-scroll {
 
     .popup-full-container .popup-full {
         background-color: rgba(0, 0, 0, 0.3);
-        display: table-cell;
+        display: flex;
         width: 100%;
         height: 100%;
         text-align: center;
         vertical-align: middle;
+        align-items: center;
+        justify-content: center;
     }
 
         .popup-full-container .popup-full .khung-noi-dung {
