--- a/LCTMoodle/Views/BaiVietTaiLieu/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietTaiLieu/_Khung.cshtml
@@ -41,8 +41,7 @@
             foreach (var baiViet in Model)
             {
                 @Html.Partial("~/Views/BaiVietTaiLieu/_Item.cshtml", baiViet, new ViewDataDictionary() {
-                    { "DSQuyen", dsQuyen },
-                    { "MaKhoaHoc", maKhoaHoc }
+                    { "DSQuyen", dsQuyen }
                 });
             }
         }
