--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -61,7 +61,17 @@
     chucNang.Add("Danh sách thành viên");
     chucNang.Add("href='/KhoaHoc/DanhSachThanhVien/" + Model.ma + "'");
 
-    var dsQuyen = QuyenView.layDSQuyen("KH", Model.ma.Value);
+    var maNguoiDung = Session["NguoiDung"] as int?;
+    string[] dsQuyen;
+
+    if (maNguoiDung.HasValue)
+    {
+        dsQuyen = QuyenView.layDSQuyen("KH", Model.ma.Value);
+    }
+    else
+    {
+        dsQuyen = null;
+    }
 
     if (QuyenHelper.co(dsQuyen, "QLQuyen"))
     {
