--- a/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
@@ -54,7 +54,7 @@
         <section class="khung-thong-tin">
             <section class="trai">
                 <article class="hinh-dai-dien">
-                    <img src="/boy.png/" />
+                    @NguoiDungView.hinhDaiDien(Model.nguoiTao)
                 </article>
             </section>
             <section class="phai">
