--- a/LCTMoodle/Views/Quyen/QuyenKhoaHoc.cshtml
+++ b/LCTMoodle/Views/Quyen/QuyenKhoaHoc.cshtml
@@ -19,6 +19,9 @@
 
     List<string> chucNang = new List<string>();
 
+    chucNang.Add("Nội dung khóa học");
+    chucNang.Add("href='/KhoaHoc/" + khoaHoc.ma + "'");
+
     chucNang.Add("Danh sách thành viên");
     chucNang.Add("href='/KhoaHoc/DanhSachThanhVien/" + khoaHoc.ma + "'");
 
