--- a/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
+++ b/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
@@ -27,7 +27,7 @@
                         <li>
                             <section class="trai">
                                 <article class="hinh-dai-dien">
-                                    <img src="/boy.png/" />
+                                    @NguoiDungView.hinhDaiDien(baiNop.nguoiTao)
                                 </article>
                             </section>
                             <section class="phai">
