--- a/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
@@ -53,8 +53,8 @@
     <section class="khung-bai-viet">
         <section class="khung-thong-tin">
             <section class="trai">
-                <article class="hinh-dai-dien">
-                    <img src="/boy.png/" />
+                <article class="hinh-dai-dien">                    
+                    @NguoiDungView.hinhDaiDien(Model.nguoiTao)
                 </article>
             </section>
             <section class="phai">
